--- a/package.json
+++ b/package.json
@@ -1,29 +1,70 @@
 {
-  "name": "example-create-react-app-express",
-  "version": "1.0.0",
-  "description": "Example on using create-react-app with a Node Express Backend",
-  "license": "MIT",
-  "scripts": {
-    "client": "cd client && yarn start",
-    "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-    "start": "node server.js"
-  },
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "antd": "^3.2.3",
+    "axios": "^0.18.0",
+    "prop-types": "^15.6.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
+    "react-responsive": "^4.1.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.1",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^3.2.1",
     "babel-cli": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "cors": "^2.8.4",
     "debug": "^3.1.0",
     "express": "^4.16.3"
   },
+  "css": {
+    "preprocess": "less"
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": [
+      "prettier --single-quote --trailing-comma all --jsx-bracket-same-line --write",
+      "git add"
+    ]
+  },
+  "scripts": {
+    "precommit": "lint-staged",
+    "build-css": "node-less-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-less-chokidar src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm run start-api | npm run start-front",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "start-api": "node server.js",
+    "start-front": "npm start --prefix ./client/"
+  },
   "devDependencies": {
+    "babel-plugin-import": "^1.6.6",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-standard": "11.0.0",
+    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.0.0",
+    "node-less-chokidar": "^0.1.2",
+    "npm-run-all": "^4.1.2",
+    "prettier": "^1.11.1",
+    "redux-devtools-extension": "^2.13.2",
     "concurrently": "^3.5.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.10.0"
+    "less": "^3.0.0-alpha.3",
+    "less-loader": "^4.0.5"
   },
-  "keywords": [
-    "node",
-    "express",
-    "create-react-app"
-  ]
+  "proxy": "http://localhost:5000/"
 }
